--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "nodemailer": "^6.9.15",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "twilio": "^5.3.3"
   },
   "description": ""
 }
